# cv_flask

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  cv_main.py  manage.py  pyproject.toml
docker_app/: Dockerfile  Makefile
docker_app/app/: cv_main.py  manage.py  pyproject.toml
docker_app/app/templates/: cv.html
docker_server/: Dockerfile  Makefile
docker_server/conf/: nginx.conf
